src/snapshots/rlox__test_runtime__and_short_circuit.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a;\n        if false and (a = 1) {\n            print a;\n        }\n        print a;\n        \")"
---
stdout:
nil


stderr:


