src/snapshots/rlox__test_runtime__assign_a_string.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var s = \\\"foo\\\";\n        s = s + \\\"bar\\\";\n        print s;\n        \")"
---
stdout:
foobar


stderr:


