src/snapshots/rlox__test_runtime__assignment.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a = 0;\n        a = 1;\n        a = \\\"a\\\";\n        print a;\n        \")"
---
stdout:
a


stderr:


