src/snapshots/rlox__test_runtime__assignment_in_parens.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a;\n        a = 1 + (a = 1);\n        print a;\n        \")"
---
stdout:
2


stderr:


