src/snapshots/rlox__test_runtime__bad_call_nil.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(r#\"\n        nil();\n        \"#)"
---
stdout:


stderr:
Error: Canot call a value of type nil
   ╭─[<unknown>:2:12]
   │
 2 │         nil();
   │         ───  
   │               
───╯


