src/snapshots/rlox__test_runtime__bad_call_str.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(r#\"\n        \"foo\"();\n        \"#)"
---
stdout:


stderr:
Error: Canot call a value of type string
   ╭─[<unknown>:2:12]
   │
 2 │         "foo"();
   │         ─────  
   │                 
───╯


