src/snapshots/rlox__test_runtime__bad_call_var.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(r#\"\n        var f = \"foo\";\n        f();\n        \"#)"
---
stdout:


stderr:
Error: Canot call a value of type string
   ╭─[<unknown>:2:12]
   │
 3 │         f();
   │         ─  
   │             
───╯


