src/snapshots/rlox__test_runtime__basic_else.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        if false {\n            print 1;\n        } else {\n            print 2;\n        }\n        \")"
---
stdout:
2


stderr:


